--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
 		    <scope>provided</scope>
 		</dependency>
 		
+		<!-- https://github.com/DV8FromTheWorld/JDA -->
+		<dependency>
+		    <groupId>net.dv8tion</groupId>
+		    <artifactId>JDA</artifactId>
+		    <version>5.0.0-alpha.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	
 	<build>
